--- a/notebooks/ai_tools_risk_assessor_demo.ipynb
+++ b/notebooks/ai_tools_risk_assessor_demo.ipynb
@@ -1,1 +1,46 @@
-{}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AI Tools Risk Assessor Comparison (Demo)\n\n",
+    "This notebook uses the `ai_tools_risk_assessor_comparison.csv` file to turn a qualitative comparison of five AI tools (Claude, ChatGPT, Perplexity, Gemini, Copilot) into simple, inspectable views for PM decision-making.\n\n",
+    "The CSV comes from the Innovation-In-Action risk assessor prompt tests and summarizes each tool across dimensions like compliance focus, technical depth, and best use case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import pandas and load notebooks/ai_tools_risk_assessor_comparison.csv into a DataFrame, then display the first 5 rows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a numeric score for Compliance Focus for each tool by mapping Very High/High/Medium/Low-Medium to numbers in a new column called compliance_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort tools by compliance_score in descending order and display the ranking with just the tool name and compliance_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a bar chart of compliance
+
