Refactor markdown and clean up code cells
Consolidate markdown cell content and remove empty code cells.

--- a/notebooks/ai_tools_risk_assessor_demo.ipynb
+++ b/notebooks/ai_tools_risk_assessor_demo.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AI Tools Risk Assessor Comparison (Demo)\n\n",
-    "This notebook uses the `ai_tools_risk_assessor_comparison.csv` file to turn a qualitative comparison of five AI tools (Claude, ChatGPT, Perplexity, Gemini, Copilot) into simple, inspectable views for PM decision-making.\n\n",
-    "The CSV comes from the Innovation-In-Action risk assessor prompt tests and summarizes each tool across dimensions like compliance focus, technical depth, and best use case."
+    "# AI Tools Risk Assessor Comparison (Demo)\n\nThis notebook uses the `ai_tools_risk_assessor_comparison.csv` file to turn a qualitative comparison of five AI tools (Claude, ChatGPT, Perplexity, Gemini, Copilot) into simple, inspectable views for PM decision-making.\n\nThe CSV comes from the Innovation-In-Action risk assessor prompt tests and summarizes each tool across dimensions like compliance focus, technical depth, and best use case."
    ]
   },
   {
@@ -29,18 +27,4 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sort tools by compliance_score in descending order and display the ranking with just the tool name and compliance_score\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a bar chart of compliance
-
+   "execution
