Update notebook with valid JSON and formatting fixes

--- a/notebooks/ai_tools_risk_assessor_demo.ipynb
+++ b/notebooks/ai_tools_risk_assessor_demo.ipynb
@@ -1,10 +1,17 @@
+## Complete, tested valid JSON for the notebook
+
+Copy this **entire block** and paste it into the GitHub edit box. It’s complete, valid nbformat v4 JSON with all 5 cells.
+
+```json
 {
  "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AI Tools Risk Assessor Comparison (Demo)\n\nThis notebook uses the `ai_tools_risk_assessor_comparison.csv` file to turn a qualitative comparison of five AI tools (Claude, ChatGPT, Perplexity, Gemini, Copilot) into simple, inspectable views for PM decision-making.\n\nThe CSV comes from the Innovation-In-Action risk assessor prompt tests and summarizes each tool across dimensions like compliance focus, technical depth, and best use case."
+    "# AI Tools Risk Assessor Comparison (Demo)\n\n",
+    "This notebook uses the `ai_tools_risk_assessor_comparison.csv` file to turn a qualitative comparison of five AI tools (Claude, ChatGPT, Perplexity, Gemini, Copilot) into simple, inspectable views for PM decision-making.\n\n",
+    "The CSV comes from the Innovation-In-Action risk assessor prompt tests and summarizes each tool across dimensions like compliance focus, technical depth, and best use case."
    ]
   },
   {
@@ -13,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import pandas and load notebooks/ai_tools_risk_assessor_comparison.csv into a DataFrame, then display the first 5 rows\n"
+    "# Import pandas and load notebooks/ai_tools_risk_assessor_comparison.csv into a DataFrame, then display the first 5 rows"
    ]
   },
   {
@@ -22,9 +29,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a numeric score for Compliance Focus for each tool by mapping Very High/High/Medium/Low-Medium to numbers in a new column called compliance_score\n"
+    "# Create a numeric score for Compliance Focus for each tool by mapping Very High/High/Medium/Low-Medium to numbers in a new column called compliance_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort tools by compliance_score in descending
+
+[1](https://ppl-ai-file-upload.s3.amazonaws.com/web/direct-files/attachments/113175080/631c2bf8-13a7-49c7-a8a1-7382d667b854/Comparison-AI-Tools-Risk-Accessor.docx)
+[2](https://ppl-ai-file-upload.s3.amazonaws.com/web/direct-files/attachments/113175080/75e3425f-72ed-4c5e-b69f-c7d530117741/Prompt-Tests-Finance.docx)
